create: Script to generate fake data

--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -614,7 +614,7 @@
                                     <i class="icofont-arrow-left"></i>
                                     prev product
                                     <span class="product-nav-popup">
-                                        <img src="images/product/02.jpg" alt="product">
+                                        <img src=" {% static 'en/images/product/02.jpg' %} " alt="product">
                                         <small>green chilis</small>
                                     </span>
                                 </a>
@@ -1210,7 +1210,7 @@
                                     <i class="fas fa-heart"></i>
                                 </button>
                                 <a class="product-image" href="product-video.html">
-                                    <img src="images/product/08.jpg" alt="product">
+                                    <img src="{% static 'en/images/product/08.jpg' %}" alt="product">
                                 </a>
                                 <div class="product-widget">
                                     <a title="Product Compare" href="compare.html" class="fas fa-random"></a>
