--- a/templates/base.html
+++ b/templates/base.html
@@ -44,6 +44,10 @@
 
         <!-- CUSTOM -->
         <link rel="stylesheet" href="{% static 'en/css/main.css' %}">
+        {% block css %}
+            <link rel="stylesheet" href="{% static 'en/css/index.css' %}">
+        {% endblock css %}
+        
         <!--=====================================
                     CSS LINK PART END
         =======================================-->
