show review-product logic in view

--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -717,30 +717,30 @@
                         <div class="product-details-frame">
                             <h3 class="frame-title">Reviews (2)</h3>
                             <ul class="review-list">
-                                {% for review in object.review_product.all  %}
-                                <li class="review-item">
-                                    <div class="review-media">
-                                        <a class="review-avatar" href="#">
-                                            <img src="images/avatar/01.jpg" alt="review">
-                                        </a>
-                                        <h5 class="review-meta">
-                                            <a href="#">{{review.user}}</a>
-                                            <span>{{review.create_at}}</span>
-                                        </h5>
-                                    </div>
-                                    <ul class="review-rating">
-                                        <li class="icofont-ui-rating"></li>
-                                        <li class="icofont-ui-rating"></li>
-                                        <li class="icofont-ui-rating"></li>
-                                        <li class="icofont-ui-rating"></li>
-                                        <li class="icofont-ui-rate-blank"></li>
-                                    </ul>
-                                    <p class="review-desc">{{review.review}}</p>
-                                
+                                {% for review in reviews  %}
+                                    <li class="review-item">
+                                        <div class="review-media">
+                                            <a class="review-avatar" href="#">
+                                                <img src="images/avatar/01.jpg" alt="review">
+                                            </a>
+                                            <h5 class="review-meta">
+                                                <a href="#">{{review.user}}</a>
+                                                <span>{{review.create_at}}</span>
+                                            </h5>
+                                        </div>
+                                        <ul class="review-rating">
+                                            <li class="icofont-ui-rating"></li>
+                                            <li class="icofont-ui-rating"></li>
+                                            <li class="icofont-ui-rating"></li>
+                                            <li class="icofont-ui-rating"></li>
+                                            <li class="icofont-ui-rate-blank"></li>
+                                        </ul>
+                                        <p class="review-desc">{{review.review}}</p>
+                                    
+                                 
+    
+                                    </li>
                                 {% endfor %}
-
-                                </li>
-                                
                             </ul>
                         </div>
                         <div class="product-details-frame">
