--- a/products/templates/products/product_list.html
+++ b/products/templates/products/product_list.html
@@ -989,7 +989,7 @@
                                         {% for n in paginator.page_range  %}
                                             {% if page_obj.number == n  %}
                                              <li class="page-item"><a class="page-link active" href="#">{{n}}</a></li>
-                                            {% else %}
+                                            {% elif n > page_obj.number|add:'-4' and n < page_obj.number|add:'4' %}
                                        
                                              <li class="page-item"><a class="page-link" href="?page = {{n}} ">{{n}}</a></li>
                                             {% endif %}
