--- a/products/templates/products/product_list.html
+++ b/products/templates/products/product_list.html
@@ -973,7 +973,9 @@
                             </div>
                             {% endfor %}
                         </div>
-                        {% if page_obj %}
+                        
+                        
+                        {% if is_paginated %}
                         <div class="row">
                             <div class="col-lg-12">
                                 <div class="bottom-paginate">
@@ -981,7 +983,7 @@
                                     <ul class="pagination">
                                     {% if page_obj.has_pervious %}
                                         <li class="page-item">
-                                            <a class="page-link" href="?page = {{page_obj.pervious_page_number}}">
+                                            <a class="page-link" href="?page={{page_obj.pervious_page_number}}">
                                                 <i class="fas fa-long-arrow-alt-left"></i>
                                             </a>
                                         </li>
@@ -991,12 +993,12 @@
                                              <li class="page-item"><a class="page-link active" href="#">{{n}}</a></li>
                                             {% elif n > page_obj.number|add:'-4' and n < page_obj.number|add:'4' %}
                                        
-                                             <li class="page-item"><a class="page-link" href="?page = {{n}} ">{{n}}</a></li>
+                                             <li class="page-item"><a class="page-link" href="?page={{n}} ">{{n}}</a></li>
                                             {% endif %}
                                         {% endfor %}
                                         {% if page_obj.has_next %}
                                         <li class="page-item">
-                                            <a class="page-link" href="?page = {{page_obj.next_page_number}}">
+                                            <a class="page-link" href="?page={{page_obj.next_page_number}}">
                                                 <i class="fas fa-long-arrow-alt-right"></i>
                                             </a>
                                         </li>
