--- a/products/templates/products/brand_list.html
+++ b/products/templates/products/brand_list.html
@@ -80,8 +80,8 @@
                     </div>
                     {% endfor %}
                 </div>
-        {% if page_obj %}
-            <div class="row">
+                {% if is_paginated %}
+                <div class="row">
                     <div class="col-lg-12">
                         <div class="bottom-paginate">
                             <p class="page-info">Showing 12 of 60 Results</p>
@@ -113,6 +113,5 @@
                     </div>
                 </div>
                 {% endif %}
-            </div>
         </section>
     {% endblock body %}
