--- a/products/templates/products/brand_detail.html
+++ b/products/templates/products/brand_detail.html
@@ -45,7 +45,7 @@
                 <li class="fas fa-star"></li>
                 <li class="total">(163 ratings)</li>
             </ul>
-            <p>(45 items)</p>
+            <p>({{brand.products_count}} items)</p>
         </div>
         <!--=====================================
                   BRAND SINGLE PART END
