--- a/products/templates/products/brand_list.html
+++ b/products/templates/products/brand_list.html
@@ -74,7 +74,7 @@
                             </div>
                             <div class="brand-meta">
                                 <h4>{{obj.name}}</h4>
-                                <p>(45 items)</p>
+                                <p>({{obj.products_count}} items)</p>
                             </div>
                         </div>
                     </div>
