--- a/products/templates/products/product_list.html
+++ b/products/templates/products/product_list.html
@@ -949,7 +949,7 @@
                                             <i class="active icofont-star"></i>
                                             <i class="active icofont-star"></i>
                                             <i class="icofont-star"></i>
-                                            <a href="product-video.html">(3)</a>
+                                            <a href="product-video.html">({{product.review_count}})</a>
                                         </div>
                                         <h6 class="product-name">
                                             <a href="/products/{{product.slug}}">{{product.name}}</a>
