--- a/templates/base.html
+++ b/templates/base.html
@@ -189,14 +189,14 @@
                                     <i class="icofont-ui-touch-phone"></i>
                                     <p>
                                         <small>call us</small>
-                                        <span>(+880) 183 8288 389</span>
+                                        <span>{{settings_data.call_us}}</span>
                                     </p>
                                 </div>
                                 <div class="navbar-info">
                                     <i class="icofont-ui-email"></i>
                                     <p>
                                         <small>email us</small>
-                                        <span>support@greeny.com</span>
+                                        <span>{{settings_data.email_us}}</span>
                                     </p>
                                 </div>
                             </div>
@@ -305,10 +305,10 @@
                             <a class="footer-logo" href="#">
                                 <img src="{% static 'en/images/logo.png' %}" alt="logo">
                             </a>
-                            <p class="footer-desc">Adipisci asperiores ipsum ipsa repellat consequatur repudiandae quisquam assumenda dolor sitt perspiciatis Lorem amet.</p>
+                            <p class="footer-desc">{{settings_data.subtitle}}</p>
                             <ul class="footer-social">
-                                <li><a class="icofont-facebook" href="#"></a></li>
-                                <li><a class="icofont-twitter" href="#"></a></li>
+                                <li><a class="icofont-facebook" href="{{settings_data.facebook}}"></a></li>
+                                <li><a class="icofont-twitter" href="{{settings_data.twitter}}"></a></li>
                                 <li><a class="icofont-linkedin" href="#"></a></li>
                                 <li><a class="icofont-instagram" href="#"></a></li>
                                 <li><a class="icofont-pinterest" href="#"></a></li>
@@ -322,20 +322,20 @@
                                 <li>
                                     <i class="icofont-ui-email"></i>
                                     <p>
-                                        <span>support@greeny.com</span>
-                                        <span>carrer@greeny.com</span>
+                                        <span>{{settings_data.email}}</span>
+                                         
                                     </p>
                                 </li>
                                 <li>
                                     <i class="icofont-ui-touch-phone"></i>
                                     <p>
-                                        <span>+120 279 532 13</span>
-                                        <span>+120 279 532 14</span>
+                                        <span>{{settings_data.phones}}</span>
+                                         
                                     </p>
                                 </li>
                                 <li>
                                     <i class="icofont-location-pin"></i>
-                                    <p>1Hd- 50, 010 Avenue, NY 90001 United States</p>
+                                    <p>{{settings_data.address}}</p>
                                 </li>
                             </ul>
                         </div>
