--- a/templates/base.html
+++ b/templates/base.html
@@ -23,7 +23,7 @@
         =======================================-->
 
         <!-- WEBPAGE TITLE -->
-        <title>Shop 4 Column - Greeny</title>
+        <title>Amazon</title>
 
         <!--=====================================
                     CSS LINK PART START
@@ -366,8 +366,8 @@
                             <h3 class="footer-title">Download App</h3>
                             <p class="footer-desc">Lorem ipsum dolor sit amet tenetur dignissimos ipsum eligendi autem obcaecati minus ducimus totam reprehenderit exercitationem!</p>
                             <div class="footer-app">
-                                <a href="#"><img src="images/google-store.png" alt="google"></a>
-                                <a href="#"><img src="images/app-store.png" alt="app"></a>
+                                <a href="#"><img src="{% static 'en/images/google-store.png' %}" alt="google"></a>
+                                <a href="#"><img src="{% static 'en/images/app-store.png' %}" alt="app"></a>
                             </div>
                         </div>
                     </div>
