add : product review

--- a/settings/templates/settings/home.html
+++ b/settings/templates/settings/home.html
@@ -116,7 +116,7 @@
                                 <button class="product-wish wish">
                                     <i class="fas fa-heart"></i>
                                 </button>
-                                <a class="product-image" href="product-video.html">
+                                <a class="product-image" href="/products/{{item.slug}}">
                                     <img src="{{item.image.url}}" alt="product">
                                 </a>
                                 <div class="product-widget">
