--- a/templates/base.html
+++ b/templates/base.html
@@ -113,13 +113,17 @@
                         <button class="header-src"><i class="fas fa-search"></i></button>
                     </div>
 
-                    <a href="index.html" class="header-logo">
-                        <img src="{% static 'en/images/logo.png' %}" alt="logo">
-                    </a>
+                    {% if user.is_authenticated %}
+
                     <a href="login.html" class="header-widget" title="My Account">
                         <img src="{% static 'en/images/user.png' %}" alt="user">
-                        <span>join</span>
                     </a>
+                    {% else %}
+                    <a href="#">Login</a>
+                    
+                    <a href="#">Signup</a>
+                    {% endif %}
+                
 
                     <form class="header-form">
                         <input type="text" placeholder="Search anything...">
