--- a/templates/base.html
+++ b/templates/base.html
@@ -236,6 +236,53 @@
                 </div>
             </div>
         </section>
+         <!--=====================================
+                  CART SIDEBAR PART START
+        =======================================-->
+        <aside class="cart-sidebar">
+            <div class="cart-header">
+                <div class="cart-total">
+                    <i class="fas fa-shopping-basket"></i>
+                    <span>total item ({{cart_items|length}})</span>
+                </div>
+                <button class="cart-close"><i class="icofont-close"></i></button>
+            </div>
+            <ul class="cart-list">
+                {% for item in cart_items  %}
+                
+              
+                <li class="cart-item">
+                    <div class="cart-media">
+                        <a href="#"><img src="{{item.product.image.url}}" alt="product"></a>
+                        <button class="cart-delete"><i class="far fa-trash-alt"></i></button>
+                    </div>
+                    <div class="cart-info-group">
+                        <div class="cart-info">
+                            <h6><a href="product-single.html">{{item.product}}</a></h6>
+                            <p>Unit Price - ${{item.product.price}}5</p>
+                        </div>
+                        <div class="cart-action-group">
+                            <div class="product-action">
+                                <button class="action-minus" title="Quantity Minus"><i class="icofont-minus"></i></button>
+                                <input class="action-input" title="Quantity Number" type="text" name="quantity" value="{{item.quantity}}">
+                                <button class="action-plus" title="Quantity Plus"><i class="icofont-plus"></i></button>
+                            </div>
+                            <h6>${{item.total}}</h6>
+                        </div>
+                    </div>
+                </li> 
+                {% endfor %}
+            </ul>
+            <div class="cart-footer">
+                <a class="cart-checkout-btn" href="/orders/checkout.html">
+                    <span class="checkout-label">Proceed to Checkout</span>
+                    <span class="checkout-price">${{cart_data.cart_total}}</span>
+                </a>
+            </div>
+        </aside>
+        <!--=====================================
+                    CART SIDEBAR PART END
+        =======================================-->
         <!--=====================================
                     NEWSLETTER PART END
         =======================================-->
