--- a/templates/base.html
+++ b/templates/base.html
@@ -141,8 +141,8 @@
                         </a>
                         <button class="header-widget header-cart" title="Cartlist">
                             <i class="fas fa-shopping-basket"></i>
-                            <sup>9+</sup>
-                            <span>total price<small>$345.00</small></span>
+                            <sup>{{cart_items|length}}+</sup>
+                            <span>total price<small>${{cart_data.cart_total}}</small></span>
                         </button>
                     </div>
                 </div>
