--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -343,13 +343,7 @@
                     </li>
                     <li>
                         <a class="nav-link dropdown-link" href="#"><i class="icofont-food-cart"></i>shop</a>
-                        <ul class="dropdown-list">
-                            <li><a href="shop-5column.html">shop 5 column</a></li>
-                            <li><a href="shop-4column.html">shop 4 column</a></li>
-                            <li><a href="shop-3column.html">shop 3 column</a></li>
-                            <li><a href="shop-2column.html">shop 2 column</a></li>
-                            <li><a href="shop-1column.html">shop 1 column</a></li>
-                        </ul>
+                       
                     </li>
                     <li>
                         <a class="nav-link dropdown-link" href="#"><i class="icofont-page"></i>product</a>
@@ -571,11 +565,11 @@
         =======================================-->
         <section class="single-banner inner-section" style="background: url(images/single-banner.jpg) no-repeat center;">
             <div class="container">
-                <h2>product simple</h2>
+                <h2>{{object}}</h2>
                 <ol class="breadcrumb">
                     <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-                    <li class="breadcrumb-item"><a href="shop-4column.html">shop-4column</a></li>
-                    <li class="breadcrumb-item active" aria-current="page">product-simple</li>
+                    <li class="breadcrumb-item"><a href="/products">Products</a></li>
+                    <li class="breadcrumb-item active" aria-current="page">{{object}}</li>
                 </ol>
             </div>
         </section>
