--- a/templates/base.html
+++ b/templates/base.html
@@ -29,7 +29,7 @@
                     CSS LINK PART START
         =======================================-->
         <!-- FAVICON -->
-        <link rel="icon" href="{% static 'en/images/favicon.png' %}">
+        <link rel="icon" href="{% static 'en/images/Amazon.jpg' %}">
 
         <!-- FONTS -->
         <link rel="stylesheet" href="{% static 'en/fonts/flaticon/flaticon.css' %}" >
@@ -108,7 +108,7 @@
             <div class="container">
                 <div class="header-content">
                     <div class="header-media-group">
-                        <button class="header-user"><img src="{% static 'en/images/user.png' %}" alt="user"></button>
+                        <button class="header-user"><img src="{% static 'en/images/Amazon.jpg' %}" alt="user"></button>
                         <a href="index.html"><img src="{% static 'en/images/logo.png' %}" alt="logo"></a>
                         <button class="header-src"><i class="fas fa-search"></i></button>
                     </div>
