--- a/accounts/templates/accounts/activate.html
+++ b/accounts/templates/accounts/activate.html
@@ -1,8 +1,42 @@
-<form method = 'post'>
-{% csrf_token %}
-{{form}}
 
-<input type="submit" value="activate">
-
-
-</form>
+{% extends "auth_base.html" %}
+{% load django_bootstrap5 %}
+    
+    {% block body %}
+    
+ 
+    <section class="user-form-part">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-12 col-sm-10 col-md-12 col-lg-12 col-xl-10">
+                    <div class="user-form-logo">
+                        <a href="index.html"><img src="{{settings_data.logo.url}}" alt="logo"></a>
+                    </div>
+                        <div class="user-form-card">
+                            <div class="user-form-title">
+                                <h2>Activations!</h2>
+                                <p>Please enter the received  code to activate your account.</p>
+                            </div>
+                            <div class="user-form-group">
+                                </div>
+                                <form class="user-form" method="post" action="{% url 'login' %}">
+                                    {% csrf_token %}
+                                <div class="form-group">
+                                    {% bootstrap_form form %}
+                                </div>
+                                    <div class="form-button">
+                                         {% bootstrap_button button_type="submit" content="activate" %}
+                                    </div>
+                                  </form>
+              
+                            </div>
+                        </div>
+                  
+                        <div class="user-form-footer">
+                            <p>Greeny | &COPY; Copyright by <a href="/">{{settings_data.name}}</a></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        {% endblock body %}
