add : out of stock to template

--- a/products/templates/products/product_list.html
+++ b/products/templates/products/product_list.html
@@ -925,7 +925,7 @@
                                
                                 
                                 
-                                <div class="product-card">
+                                <div class="product-card {% if product.quantity == 0 %}product-disable{% endif %}">
                                     <div class="product-media">
                                         <div class="product-label">
                                             <label class="label-text new">{{product.flag}}</label>
