--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -730,38 +730,12 @@
                                 </tbody>
                             </table>
                         </div> {% endcomment %}
-                        <div class="product-details-frame">
-                            <h3 class="frame-title">Reviews (2)</h3>
-                            <ul class="review-list">
-                                {% for review in reviews  %}
-                                    <li class="review-item">
-                                        <div class="review-media">
-                                            <a class="review-avatar" href="#">
-                                                <img src="images/avatar/01.jpg" alt="review">
-                                            </a>
-                                            <h5 class="review-meta">
-                                                <a href="#">{{review.user}}</a>
-                                                <span>{{review.create_at}}</span>
-                                            </h5>
-                                        </div>
-                                        <ul class="review-rating">
-                                            <li class="icofont-ui-{% if review.rate > 0  %}rating{% else %}rate-blank{% endif %}"></li>
-                                            <li class="icofont-ui-{% if review.rate > 1 %}rating{% else %}rate-blank{% endif %}"></li>
-                                            <li class="icofont-ui-{% if review.rate > 2 %}rating{% else %}rate-blank{% endif %}"></li>
-                                            <li class="icofont-ui-{% if review.rate > 3 %}rating{% else %}rate-blank{% endif %}"></li>
-                                            <li class="icofont-ui-{% if review.rate > 4 %}rating{% else %}rate-blank{% endif %}"></li>
-                                        </ul>
-                                        <p class="review-desc">{{review.review}}</p>
-                                    
-                                 
-    
-                                    </li>
-                                {% endfor %}
-                            </ul>
+                        <div class="product-details-frame"  id ="all-reviews" >
+                           {% include 'includes/reviews.html' %}
                         </div>
                         <div class="product-details-frame">
                             <h3 class="frame-title">add your review</h3>
-                            <form class="review-form" method ='post' action="/products/{{object.slug}}/add_review" >
+                            <form  class="review-form" id = "reviewForm" method ='post' action="/products/{{object.slug}}/add_review" >
                                 {% csrf_token %}
                                 <div class="row">
                                     <div class="col-lg-12">
@@ -866,7 +840,31 @@
         <!--=====================================
                  PRODUCT RELATED PART END
         =======================================-->
+        <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
 
-
-
+        <script>
+            $(document).ready(function(){
+            $(document).on('submit','#reviewForm',function(event){
+                event.preventDefault();
+                $.ajax({
+                    type: $(this).attr('method'),
+                    url: $(this).attr('action'),
+                    data: $(this).serialize(),
+                    dataType: 'json',
+                    success:function(response){
+                        $('#all-reviews').html(response['result'])
+                        $('#reviewForm').trigger('reset')
+                    },
+                    error:function(response){
+                        console.log(response)
+                    }
+                })
+            })
+        })
+        </script>
+            
+      
+   
+        
+        
         {% endblock body %}
