add: ajax in base

--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -870,6 +870,8 @@
                     dataType: 'json',
                     success:function(response){
                         $('#cartItems').html(response['result'])
+                        $('#cartTotal').text(response['total'])
+                        $('#cartCount').text(response['cart_count'])
                        
                     },
                     error:function(response){
