add: ajax to add-to-cart in productlist

--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -871,7 +871,7 @@
                     success:function(response){
                         $('#cartItems').html(response['result'])
                         $('#cartTotal').text(response['total'])
-                        $('#cartCount').text(response['cart_count'])
+                        $('#cartCount').text(response['cart_data'])
                        
                     },
                     error:function(response){
@@ -883,7 +883,7 @@
         </script>
             
       
-   
-        
-        
         {% endblock body %}
+        
+        
+        
