--- a/templates/base.html
+++ b/templates/base.html
@@ -223,10 +223,8 @@
                         >
                             <i class="fas fa-shopping-basket"></i>
                             <sup id = 'cartCount''>{{cart_items|length}}+</sup>
-                            <span
-                                >total price<small id = 'cartTotal'>${{cart_data.cart_total}}</small
-                                ></span
-                            >
+                            <span> total price <small id = 'cartTotal' >${{cart_data.cart_total}}</small></span>
+                           
                         </button>
                     </div>
                 </div>
