--- a/products/templates/products/product_list.html
+++ b/products/templates/products/product_list.html
@@ -959,7 +959,7 @@
                                             {% comment %} <del>$</del> {% endcomment %}
                                             <span>${{product.price}}<small>/piece</small></span>
                                         </h6>
-                                        <form action="/orders/add-to-cart" method="post" class="row">
+                                        <form id= 'cartFormList'action="/orders/add-to-cart" method="post" class="row">
                                             {% csrf_token %}
                                             <div class="col-lg-12">
             
@@ -1027,7 +1027,32 @@
         <!--=====================================
                     SHOP PART END
         =======================================-->
-        
+        <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+
+        <script>
+            $(document).ready(function(){
+            
+            $(document).on('submit','#cartFormList',function(event){
+                event.preventDefault();
+                $.ajax({
+                    type: $(this).attr('method'),
+                    url: $(this).attr('action'),
+                    data: $(this).serialize(),
+                    dataType: 'json',
+                    success:function(response){
+                        $('#cartItems').html(response['result'])
+                        $('#cartTotal').text(response['total'])
+                        $('#cartCount').text(response['cart_data'])
+                       
+                    },
+                    error:function(response){
+                        console.log(response)
+                    }
+                })
+            })
+        })
+        </script>
+            
 
         <!--=====================================
                     NEWSLETTER PART START
